Changes To GUI (#106)
* Draft GUI

*  Update budget related methods within model to be consistent with expense related methods.

* Create BudgetCard to display Budget information

WIP, does not update when propertiews change

* Add ChangeListener to update BudgetCard status when expense list has change.

* Add BudgetListPanel to visualise Budget List

* Add support for changing budget progress bar colour when budget is exceeded.

* Remove block comments from ExpenseListPanel

* Add BudgetPanel to show expenses within Budget

* Add demo for BudgetCard, BudgetPanel, BudgetListPanel

* Update ExpenseListCard to display Expense's Date field

* Remove duplicate code

* Update theme

* Enable switching content of window between budgetList, primaryBudget, expenseList

* Add method to remove Expense from Budget

* Remove demo files used for testing new Ui parts

* Fix code to pass failing tests.

* Make tab spacing consistent in fxml files

* Make change progress bar colour so text is more readable

and remove radius from make budget card background

* Add placeholder page for when no primary budget is set

* Change colour to something less bright

* Fix regression caused by method signature change

* Resolve merge conflicts

* Add placeholder replacement

* Add TextArea which supports syntax highlighting

* Fix second match onwards of placeholder not being replaced

and fix text area not filling width

* Fix events not mirroring properly

replace addEventHandler with addEventFilter

* Refactor Command, New Command, New UI element to change panels

-refactor CommandResult to include boolean on whether command should change the panel in focus.

-packaged commands for different features into different packages

-new classes to manage UI element currently being viewed.

-new command to chance panel being viewed

* Manually readd addbudgetcommand

which was accidentally removed during rebase

* Package bu